# CIPetteLens

./: .coverage  .dockerignore  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  README.md  ci_analyzer.yaml  coverage.xml  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml
.claude/: design-guide.md  glossary.md  project-overview.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
cipettelens/: __init__.py  app.py  config.py  database.py  factories.py  lens.py  logger.py  main.py  security.py
cipettelens/cli/: __init__.py  collect.py
cipettelens/exceptions/: __init__.py  base.py  ci_analyzer.py  database.py  validation.py
cipettelens/infrastructure/: cache.py  database_pool.py
cipettelens/models/: __init__.py  ci_metrics.py  repository.py
cipettelens/repositories/: __init__.py  base.py  sqlite_metrics.py
cipettelens/services/: __init__.py  metrics_service.py
cipettelens/use_cases/: __init__.py  collect_metrics.py
cipettelens/utils/: memory.py  performance.py
cipettelens/web/: __init__.py  app.py
static/: style.css
templates/: dashboard.html
tests/: __init__.py  test_cli.py  test_lastrun_functionality.py  test_lens.py  test_models.py  test_performance.py  test_security.py  test_sqlite_repository.py
